--- a/style.css
+++ b/style.css
@@ -46,11 +46,15 @@ body {
 [data-testid="stSelectbox"] > div {
     border: 2px solid rgb(17, 63, 96); /* Contour en couleur */
     border-radius: 4px; /* Bords légèrement arrondis, optionnel */
+  background-color: white; /* Couleur de fond des options en blanc */
+    color: rgb(17, 63, 96); /* Couleur du texte des options */
 }
 
 /* Style pour le focus de la selectbox */
 [data-testid="stSelectbox"]:focus > div {
     border-color: rgb(17, 63, 96); /* Garde la même couleur de contour lors du focus */
+  background-color: white; /* Couleur de fond des options en blanc */
+    color: rgb(17, 63, 96); /* Couleur du texte des options */
 }
 
 
