--- a/style.css
+++ b/style.css
@@ -66,5 +66,10 @@ header[data-testid="stHeader"] {
     background-color: white; /* Mettre la barre en blanc */
 }
 
+ /* Optionnel : Changer la couleur des icônes et du texte dans la barre */
+header[data-testid="stHeader"] .css-1q1n0ol, /* Pour le texte */
+header[data-testid="stHeader"] svg { /* Pour les icônes */
+    color: rgb(17, 63, 96); /* Changer la couleur en bleu foncé */
+}
 
 
