--- a/style.css
+++ b/style.css
@@ -102,3 +102,13 @@ header[data-testid="stHeader"] svg { /* Pour les icônes */
  .st-emotion-cache-1ppef92:hover, .st-emotion-cache-1ppef92:active, .st-emotion-cache-1ppef92:focus-visible {
     background: rgb(207, 214, 219) !important;
 }
+
+/* Style pour espacer les selectboxes des barres */
+.selectbox-container {
+    margin-top: 40px; /* Ajuste cet espace selon tes besoins */
+}
+
+/* Style pour les titres des critères */
+.criteres-title {
+    margin-bottom: 10px; /* Ajuste cet espace selon tes besoins */
+}
