--- a/style.css
+++ b/style.css
@@ -114,17 +114,17 @@ header[data-testid="stHeader"] svg { /* Pour les icônes */
 }
 
  .st-emotion-cache-13k62yr {
-    background: rgb(14, 17, 23); /* Couleur actuelle de fond */
+    background: rgb(14, 17, 23) !important; /* Couleur actuelle de fond */
     /* Modifiez la couleur de fond comme ceci */
-    background: #ffffff; /* Exemple de couleur blanche */
+    background: #ffffff !important; /* Exemple de couleur blanche */
 }
 
  .gdg-bg-cell {
-    background-color: #ffffff; /* Exemple pour changer la couleur de fond des cellules */
+    background-color: #ffffff !important; /* Exemple pour changer la couleur de fond des cellules */
 }
 
 .gdg-bg-header {
-    background-color: #f0f0f0; /* Exemple pour changer la couleur de fond des en-têtes */
+    background-color: #f0f0f0 !important; /* Exemple pour changer la couleur de fond des en-têtes */
 }
 
 
