--- a/style.css
+++ b/style.css
@@ -103,6 +103,10 @@ header[data-testid="stHeader"] svg { /* Pour les icônes */
     background: rgb(207, 214, 219) !important;
 }
 
+ .st-emotion-cache-1qg05tj {
+    font-size: 14px;
+    color: !important#113f60;
+
 /* Style pour espacer les selectboxes des barres */
 .selectbox-container {
     margin-top: 40px !important; /* Ajuste cet espace selon tes besoins */
