--- a/style.css
+++ b/style.css
@@ -110,6 +110,7 @@ header[data-testid="stHeader"] svg { /* Pour les icônes */
     display: flex;
     visibility: visible;
     margin-bottom: 0.50rem;
+    margin-top: 1.50rem;
     height: auto;
     min-height: 1.5rem;
     vertical-align: middle;
