--- a/style.css
+++ b/style.css
@@ -144,4 +144,14 @@ header[data-testid="stHeader"] svg { /* Pour les icônes */
     background-color: #f0f0f0 !important; /* Exemple pour changer la couleur de fond des en-têtes */
 }
 
+ /*Couleur top 10*/
+ h2 {
+    font-family: "Source Sans Pro", sans-serif;
+    font-weight: 600;
+    color: #113f60!important;
+    letter-spacing: -0.005em;
+    padding: 1rem 0px;
+    margin: 0px;
+    line-height: 1.2;
+}
 
