--- a/style.css
+++ b/style.css
@@ -125,6 +125,17 @@ header[data-testid="stHeader"] svg { /* Pour les icônes */
     margin-top: 40px !important; /* Ajuste cet espace selon tes besoins */
 }
 
+  /*Couleur top 10*/
+ h2 {
+    font-family: "Source Sans Pro", sans-serif;
+    font-weight: 600;
+    color: #113f60 !important;
+    letter-spacing: -0.005em;
+    padding: 1rem 0px;
+    margin: 0px;
+    line-height: 1.2;
+}
+ 
 /* Style pour les titres des critères */
 .criteres-title {
     margin-bottom: 10px !important; /* Ajuste cet espace selon tes besoins */
