--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ header[data-testid="stHeader"] svg { /* Pour les icônes */
 }
  /*couleur de la selection "hover" */ 
  .st-emotion-cache-1ppef92:hover, .st-emotion-cache-1ppef92:active, .st-emotion-cache-1ppef92:focus-visible {
-    background: rgb(207, 214, 219) !important;
+    background: rgb(207, 214, 219);
 }
 
  /* Couleur des titres des pickers */
@@ -111,7 +111,7 @@ header[data-testid="stHeader"] svg { /* Pour les icônes */
     display: flex;
     visibility: visible;
     margin-bottom: 0.50rem;
-    margin-top: 2.50rem;
+    margin-top: 1.50rem;
     height: auto;
     min-height: 1.5rem;
     vertical-align: middle;
