--- a/style.css
+++ b/style.css
@@ -148,5 +148,6 @@ header[data-testid="stHeader"] svg { /* Pour les icônes */
  
 /* Style pour les titres des critères */
 .criteres-title {
-    margin-bottom: 10px ; /* Ajuste cet espace selon tes besoins */
+    margin-bottom: 10px
+    margin-top: 10px ; /* Ajuste cet espace selon tes besoins */
 
