--- a/style.css
+++ b/style.css
@@ -42,6 +42,23 @@ body {
     margin-top: 10px;
 }
 
+  /* Couleur des titres des pickers */
+  .st-emotion-cache-1qg05tj {
+    font-size: 18px !important;
+    font-weight: bold !important;
+    color: rgb(17 63 96);
+    display: flex;
+    visibility: visible;
+    margin-bottom: 0.50rem;
+    margin-top: 1.50rem;
+    height: auto;
+    min-height: 1.5rem;
+    vertical-align: middle;
+    flex-direction: row;
+    -webkit-box-align: center;
+    align-items: center;
+}
+
 /* Modifier la couleur du contour et de fond de la selectbox */
 [data-testid="stSelectbox"] > div {
     border: 2px solid #113f60 !important; /* Contour en couleur avec !important */
