--- a/style.css
+++ b/style.css
@@ -42,6 +42,12 @@ body {
     margin-top: 10px;
 }
 
+ .st-emotion-cache-1whx7iy p {
+    word-break: break-word;
+    margin-bottom: 0px;
+    font-size: 22px;
+}
+
  
 
 /* Modifier la couleur du contour et de fond de la selectbox */
