--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ header[data-testid="stHeader"] svg { /* Pour les icônes */
 
 /* Style pour espacer les selectboxes des barres */
 .selectbox-container {
-    margin-top: 40px !important; /* Ajuste cet espace selon tes besoins */
+    margin-top: 40px !important; margin-bottom: 40px /* Ajuste cet espace selon tes besoins */
 }
  
   /*Couleur top 10*/
