--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ header[data-testid="stHeader"] svg { /* Pour les icônes */
     color: rgb(17 63 96);
     display: flex;
     visibility: visible;
-    margin-bottom: 0.50rem;
+    margin-bottom: 3.50rem;
     margin-top: 1.50rem;
     height: auto;
     min-height: 1.5rem;
@@ -136,7 +136,7 @@ header[data-testid="stHeader"] svg { /* Pour les icônes */
 
 /* Style pour espacer les selectboxes des barres */
 .selectbox-container {
-    margin-top: 40px !important; margin-bottom: 40px !important/* Ajuste cet espace selon tes besoins */
+    margin-top: 40px !important;/* Ajuste cet espace selon tes besoins */
 }
  
   /*Couleur top 10*/
