--- a/style.css
+++ b/style.css
@@ -52,6 +52,8 @@ body {
     padding: 30px;
     font-size: 1rem;
     font-weight: 400;
+    padding-bottom: 30px; /* Ajout du padding-bottom */
+}
 }
 
  
