--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ header[data-testid="stHeader"] svg { /* Pour les icônes */
 
 /* Style pour espacer les selectboxes des barres */
 .selectbox-container {
-    margin-top: 80px !important; margin-bottom: 3.50rem !important;/* Ajuste cet espace selon tes besoins */
+    margin-top: 80px !important; /* Ajuste cet espace selon tes besoins */
 }
  
   /*Couleur top 10*/
@@ -149,7 +149,7 @@ header[data-testid="stHeader"] svg { /* Pour les icônes */
     color: #113f60 !important;
     letter-spacing: -0.005em;
     padding: 1rem 0px;
-    margin: 40px;
+    margin: 40px !important;
     line-height: 1.2;
 }
 
@@ -160,6 +160,6 @@ header[data-testid="stHeader"] svg { /* Pour les icônes */
     color: rgb(17 63 96) !important;
     letter-spacing: -0.005em;
     padding: 0.5rem 0px 1rem;
-    margin: 40px;
+    margin: 40px !important;
     line-height: 1.2;
  
