--- a/style.css
+++ b/style.css
@@ -119,22 +119,21 @@ header[data-testid="stHeader"] svg { /* Pour les icônes */
     background: rgb(207, 214, 219);
 }
 
- /* Couleur des titres des pickers */
-  .st-emotion-cache-1qg05tj {
-    font-size: 18px !important;
-    font-weight: bold !important;
+ /* Styles pour les titres des pickers */
+.st-emotion-cache-1qg05tj {
+    font-size: 18px;
+    font-weight: bold;
     color: rgb(17 63 96);
     display: flex;
     visibility: visible;
     margin-bottom: 0.50rem;
     margin-top: 1.50rem;
-    height: auto;
-    min-height: 1.5rem;
-    vertical-align: middle;
-    flex-direction: row;
-    -webkit-box-align: center;
-    align-items: center;
     padding-bottom: 20px;
+}
+
+/* Style pour espacer les pickers des graphiques */
+.selectbox-container {
+    margin-bottom: 50px; /* Espace entre les pickers et les graphiques */
 }
 
 /* Style pour espacer les selectboxes des barres */
@@ -142,24 +141,25 @@ header[data-testid="stHeader"] svg { /* Pour les icônes */
     margin-top: 80px !important; /* Ajuste cet espace selon tes besoins */
 }
  
-  /*Couleur top 10*/
- h2 {
+ /* Espacement et style pour les titres de graphiques */
+h2 {
     font-family: "Source Sans Pro", sans-serif;
     font-weight: 600;
     color: #113f60 !important;
     letter-spacing: -0.005em;
     padding: 1rem 0px;
-    margin: 40px !important;
+    margin-top: 20px; /* Espace au-dessus des titres h2 */
+    margin-bottom: 20px; /* Espace en dessous des titres h2 */
     line-height: 1.2;
 }
 
-  /*Couleur titre prix m²*/
- h3 {
+  h3 {
     font-family: "Source Sans Pro", sans-serif;
     font-weight: 600;
     color: rgb(17 63 96) !important;
     letter-spacing: -0.005em;
     padding: 0.5rem 0px 1rem;
-    margin: 40px !important;
+    margin-top: 20px; /* Espace au-dessus des titres h3 */
+    margin-bottom: 20px; /* Espace en dessous des titres h3 */
     line-height: 1.2;
- 
+}
