--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body {
     margin: 20px 20px 1rem;
     padding: 30px;
     font-size: 1rem;
-    font-weight: 400;
+    font-weight: bold;
     padding-bottom: 30px; /* Ajout du padding-bottom */
 }
 }
